@@ -80,36 +80,89 @@ ck pull repo:ck-mlperf-inference
 
 
 
-## Install CK packages with MLPerf inference results
+## Install CK package with MLPerf inference results (can be private for submission)
 
 ```bash
-ck install package --tags=mlperf,inference,results,v1.0
-ck install package --tags=mlperf,inference,results,v0.7
-ck install package --tags=mlperf,inference,results,v0.5
+ck install package --tags=mlperf,inference,results
 ```
 
-## Import results into CK format
+
+## Configure submission
+
+### Set MLPerf inference version
+```bash
+ck set kernel var.mlperf_inference_version=1.0
+```
+ or
+```bash
+export CK_MLPERF_INFERENCE_VERSION=1.0
+```
+
+### Set MLPerf inference division
+```bash
+ck set kernel var.mlperf_inference_division=closed
+```
+ or
+```bash
+export CK_MLPERF_INFERENCE_DIVISION=closed
+```
+
+### Set MLPerf submitter
+```bash
+ck set kernel var.mlperf_submitter=OctoML
+```
+ or
+```bash
+export CK_MLPERF_SUBMITTER=OctoML
+```
+
+
+### Set the name of the base system
+```bash
+ck set kernel.var.mlperf_system_base=rpi4-ubuntu20.04
+```
+ or
+```bash
+export CK_MLPERF_SYSTEM_BASE=rpi4-ubuntu20.04
+```
+
+### Add CK entry for the base system
+
+List available systems from past MLPerf inference submissions:
+```bash
+ck ls bench.mlperf.system:*rpi4* | sort
+```
 
 ```bash
-ck import bench.mlperf.inference --target_repo=ck-mlperf-inference
+ck add bench.mlperf.system:rpi4-ubuntu20.04 (--base={name from above list})
 ```
 
-## Display results locally
+For example:
+```bash
+ck add bench.mlperf.system:rpi4-ubuntu20.04 --base=rpi4-tflite-v2.2.0-ruy
+```
+
+CK will fill in some keys but you still need to update it further.
+
+Note that above command will create a CK entry with this system
+in the "local" repo:
+```bash
+ck find bench.mlperf.system:rpi4-ubuntu20.04
+```
+
+if you want to prepare system description in the public "ck-mlperf-inference" repo
+or in your own private submission repo, use the following command:
 
 ```bash
-ck display dashboard --template=result --cfg=mlperf.inference.all
+ck add {target CK repo name}:bench.mlperf.system:rpi4-ubuntu20.04
 ```
 
-## Display results at cKnowledge.io
 
-* [List dashboards](https://cknowledge.io/?q=%22mlperf-inference-all-*%22)
 
-## Process results on a Pareto frontier
 
-```bash
-ck filter bench.mlperf.inference:mlperf-inference-all-image-classification-edge-singlestream-pareto 
-ck filter bench.mlperf.inference:mlperf-inference-all-*-pareto 
-```
+
+
+
 
 
 # Maintainers
